# clippy

./: .gitignore  example.c  meson.build
lib/libclippy/: meson.build
lib/libclippy/include/: copy-wayland.h  copy-x11.h  copy.h
lib/libclippy/src/: copy-wayland.c  copy-x11.c  copy.c  util.h
src/: copy-wayland.c  copy-wayland.h  copy-x11.c  copy-x11.h  copy.c  copy.h  main.c  util.h
